# byte-brewery

./: .augmentignore  .coveragerc  .gitignore  .projlist  CLAUDE.md  README.md  install.sh  pyproject.toml  run-tests.sh  setup.py  terminal_command.sh  tox.ini  view.html
docs/: code-surfacing-techniques.md  kitchen-agent-callgraph-analysis.md  kitchen-agent-diagram-analysis.md  llm-guide.md  py_diagram.md
prompt_extractor/: Branch of Czym jest aforyzm_.txt  Copy of Branch of Czym jest aforyzm_.txt
src/: chats_react_summarizer.json  dce.py  gpt-cost.sh  pext.py  react-code-summary.sh
src/aireview/: const.py  core.py  domain.py  engine.py  main.py  utils.py
src/aireview/docs/: usecases.md
src/aireview/services/: config_loader.py  debugger.py  git_inspector.py  internal_commands.py  patch_manager.py  providers.py  runner.py
src/aireview/tests/: test_markdown_parsing.py
src/augment_ai/: __init__.py  aug_common.py  aug_extract_json.py  aug_extract_responses.py  aug_pipeline.py
src/prompt_extractor/: cli.py  core.py  goal.md  goal2.md  html_formatter.py  models.py  spec.md
src/taskr/: package.json
src/taskr/src/: favorites.js  index.js
tests/: .dce.json  test_aireview.py  test_aireview2.py  test_aug_pipeline.py  test_cli.py  test_core.py  test_html_formatter.py  test_internal_commands.py  test_models.py  tests_dce.py  tests_pext.py
tests/data/: analyzed_prompts.json  input.xml
view-time.md/: Branch of Czym jest aforyzm_.md  Copy of Branch of Czym jest aforyzm_.md  Czym jest aforyzm_.md
view-tree.md/: Branch of Czym jest aforyzm_.md  Copy of Branch of Czym jest aforyzm_.md  Czym jest aforyzm_.md
