# /pyproject.toml (Root)

[project]
name = "byte-brewery"
version = "1.0.0"
description = "Scripts crafted like fine, magical ales for AI development"
requires-python = ">=3.10"
dependencies = [
    "aireview",
    "augment-ai",
    "google-genai>=1.56.0",
    "prompt-extractor",
    "utils",
    "svelte-mapper",
    "pycallgraph2>=1.1.3",
    "setuptools>=82.0.1",
]

[tool.uv.sources]
aireview = { workspace = true }
augment-ai = { workspace = true }
prompt-extractor = { workspace = true }
utils = { workspace = true }
svelte-mapper = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

# Modern uv way to handle development/testing dependencies globally
[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-watch>=4.2.0",
]

# Global pytest configuration
[tool.pytest.ini_options]
addopts = "-v"
